@@ -1,7 +1,11 @@
-package com.currencybot.handlers;
+package com.currencybot.handlers.impl;
 
-import com.currencybot.bot.BotState;
+import com.currencybot.config.CallBackStrings;
+import com.currencybot.entities.BotState;
 import com.currencybot.entities.User;
+import com.currencybot.handlers.Handler;
+import com.currencybot.services.UserService;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 import org.telegram.telegrambots.meta.api.methods.PartialBotApiMethod;
 import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
@@ -15,15 +19,22 @@ import java.util.List;
 @Component
 public class StartHandler implements Handler {
 
+    private final UserService userService;
+
+    @Autowired
+    public StartHandler(UserService userService) {
+        this.userService = userService;
+    }
+
     @Override
     public List<PartialBotApiMethod<? extends Serializable>> handle(User user, String message) {
 
         InlineKeyboardMarkup inlineKeyboardMarkup = new InlineKeyboardMarkup();
 
         List<InlineKeyboardButton> inlineKeyboardButtonsRowOne = List.of(
-                InlineKeyboardButton.builder().text("доллар").callbackData("/dollar").build(),
-                InlineKeyboardButton.builder().text("евро").callbackData("/euro").build(),
-                InlineKeyboardButton.builder().text("рубль").callbackData("/rouble").build());
+                InlineKeyboardButton.builder().text("доллар").callbackData(CallBackStrings.DOLLAR).build(),
+                InlineKeyboardButton.builder().text("евро").callbackData(CallBackStrings.EURO).build(),
+                InlineKeyboardButton.builder().text("рубль").callbackData(CallBackStrings.ROUBLE).build());
 
         inlineKeyboardMarkup.setKeyboard(List.of(inlineKeyboardButtonsRowOne));
 
@@ -36,8 +47,12 @@ public class StartHandler implements Handler {
                 .replyMarkup(inlineKeyboardMarkup)
                 .build();
 
+        user.setBotState(BotState.SELECTING_CURRENCY);
+        userService.save(user);
+
         return List.of(welcomeMessage);
     }
+
 
     @Override
     public BotState operatedBotState() {
@@ -46,6 +61,6 @@ public class StartHandler implements Handler {
 
     @Override
     public List<String> operatedCallBackQuery() {
-        return Collections.emptyList();
+        return List.of(CallBackStrings.BACK);
     }
 }
